# DB_MVP_demo

./: CMakeLists.txt  README.md  USER_GUIDE.md  build.sh  run.sh
include/: Database.hpp  Parser.hpp  QueryExecutor.hpp  Result.hpp  Storage.hpp  Types.hpp
src/: Result.cpp  main.cpp
tests/: demo.sql
